/* Changes-1.08.txt */

--- New features -----

! New XCore target BeagleBoneBlack has been created.

AttachmentHost.h

  Helper class for attachment/detachment implementation.

net/NetFork.h

  Support device for multitask network processing.

gadget/Locked.h

  Helper class to apply a mutex on the object access.

BlockFifo.h

  Fifo class with block operations.

net/SingleBridge.h

  Same as the Bridge, but connects two endpoint devices.

net/SingleEchoDevice.h

  Same as the EchoDevice, but works as an endpoint device.

net/PSec.h

  PSec implementation.

net/PKE.h

  PKE implementation.

math/SmallPrimes.h

  The list of all primes < 1000000 .

math/IntegerOctetBuilder.h

  Build an Integer from an octet array representation.

math/ModEngine.h

  Support for modular operations.

math/NoPrimeTest.h

  Quick "no-prime" test for integers.

crypton/DHExp.h

  Diffie-Hellman common secret generation.

crypton/Forget.h

  Forget() is added to properly cleanup info.

TypeSwitch.h

  Switch implementation based on int to type mapping.

gadget/Meta.h

  CommonType is added.

PerTask.h

  Advanced per-task object support.

TaskHeap.h

  Per-task heap.

gadget/UtilFunc.h

  Cap() and Fit() are added.

Swap.h

  NullBySwap() and MoveBySwap() are added.

Counters.h

  operator += is added.

net/PacketEndpointDevice.h

  Optional interfaces ConnectionProc are added.

--- Updates ----------

Regen

  Fixed generated bar constructor and the method setTo(Bar &bar,uint32 ind).

WIN32 

  Target rebased on gcc-4.8.2 from the latest cygwin.

base/PlatformBase.h

  OptimizeBarrier() is added.

UIntSplit.h

  Len has made public.
  The method take() is added.

Random.h MersenneTwister.h

  warp() is added.

gadget/UIntFunc.h

  Multiplicative operations are added.

----------------------